--- a/hn-friends/settings/settings.html
+++ b/hn-friends/settings/settings.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-  <div class="container">
+  <div class="container" id="container">
     <div class="title">HN Friends</div>
 
     <div class="buttons">
